Fixing an overflow issue on the body-content class, forcing powershell script to zip all files inside publish folder.

--- a/Matt-Kwiecien-MVC/wwwroot/css/site.css
+++ b/Matt-Kwiecien-MVC/wwwroot/css/site.css
@@ -25,7 +25,7 @@ body {
 }
 
 .body-content{
-    overflow-y:scroll;
+    overflow-y:auto;
 }
 
 ul {
